--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>   
     </div>-->
     <div class="row justify-content-center mt-4" style="padding:2%;">
-      <a href="<?= base_url('fitur_desain/page1/page1.html'); ?>" class="d-md-none btn btn-primary btn-lg bg-gradient"><i class="bi bi-file-image text-white"></i> Cari desain keren dan menarik</a>
+      <a href="fitur_desain/page1/page1.html" class="d-md-none btn btn-primary btn-lg bg-gradient"><i class="bi bi-file-image text-white"></i> Cari desain keren dan menarik</a>
       <a href="https://api.whatsapp.com/send?phone=6285892022876&text=saya%20ingin%20konsultasi%20dan%20tanya%20tanya%20mengenai%20desain%20grafis?" class="d-md-none btn btn-primary btn-lg bg-gradient mt-2"><i class="bi bi-whatsapp"></i> Konsultasi dan bantuan desain</a>
       
       
