--- a/user_fitur/long-sleeve/index.html
+++ b/user_fitur/long-sleeve/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="navbar">
-        <a href="../../index.html" id="kembali">
+        <a href="../../../index.html" id="kembali">
            <p id="kembalitext">Kembali</p>
 		</a>
         <a href="" id="kembali2">
@@ -22,9 +22,9 @@
 		<a type="button" id="save">
 		<p id="savetext">Download <i class="bi bi-download"></i></p>
 		</a>
-		<!--<a href="../../auth" id="home">Home</a>-->
-		<a href="../../auth/registration" id="daftar">Daftar</a>
-		<a href="../../auth/login" id="login">Login</a>
+		<a href="../../../index.html" id="home">Home</a>
+		<!-- <a href="../../auth/registration" id="daftar">Daftar</a>
+		<a href="../../auth/login" id="login">Login</a> -->
 	</div>
 
   <div class="contener_utama">
