--- a/user_fitur/tote-bag/index.html
+++ b/user_fitur/tote-bag/index.html
@@ -23,7 +23,7 @@
 		<a type="button" id="save">
 		<p id="savetext">Download <i class="bi bi-download"></i></p>
 		</a>
-		<a href="../../auth" id="home">Home</a>
+		<a href="../../index.html" id="home">Home</a>
 		<!--<a href="../../auth/registration" id="daftar">Daftar</a>
 		<a href="../../auth/login" id="login">Login</a>-->
 	</div>
