--- a/main_desain/desain3.html
+++ b/main_desain/desain3.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg bg-primary bg-gradient">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../auth">kembali</a>
+        <a class="navbar-brand" href="../index.html">kembali</a>
         <!-- <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Cari desain" aria-label="Search">
         <button class="btn btn-outline-success text-white" type="submit">Cari</button>
