--- a/user_fitur/crewneck/index.html
+++ b/user_fitur/crewneck/index.html
@@ -22,9 +22,9 @@
 		<a href="../../auth/registration" type="button" id="save">
 		<p id="savetext">Download <i class="bi bi-download"></i></p>
 		</a>
-		<!--<a href="../../auth" id="home">Home</a>-->
-		<a href="../../auth/registration" id="daftar">Daftar</a>
-		<a href="../../auth/login" id="login">Login</a>
+		<a href="../../index.html" id="home">Home</a>
+		<!-- <a href="../../auth/registration" id="daftar">Daftar</a>
+		<a href="../../auth/login" id="login">Login</a> -->
 	</div>
 
   <div class="contener_utama">
