--- a/user_fitur/t-shirt/index.html
+++ b/user_fitur/t-shirt/index.html
@@ -22,7 +22,7 @@
 		<a type="button" id="save">
 		<p id="savetext">Download <i class="bi bi-download"></i></p>
 		</a>
-		<a href="../../auth" id="home">Home <i class="fas fa-home"></i></a>
+		<a href="../../index.html" id="home">Home <i class="fas fa-home"></i></a>
 		<!--<a href="../../auth/registration" id="daftar">Daftar</a>
 		<a href="../../auth/login" id="login">Login</a>-->
 	</div>
