menambahkan menu dropdown

--- a/index.html
+++ b/index.html
@@ -58,7 +58,21 @@
        <h1 class="d-none d-md-block">Custom Desain</h1>
        <h5 class="d-none d-md-block">Upload desain suka-suka</h5>
        <p class= "d-none d-md-block text-danger">Free Download Mock-up</p>
-       <a href="<?= base_url('auth/registration'); ?>" class="btn btn-primary bg-gradient btn-lg mt-2">Daftar Sekarang</a>
+       <div class="dropdown">
+           <button class="btn btn-primary dropdown-toggle mt-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Buat Sekarang
+            </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="user_fitur/t-shirt/index.html">t-shirt</a></li>
+            <li><a class="dropdown-item" href="user_fitur/polo-shirt/index.html">polo-shirt</a></li>
+            <li><a class="dropdown-item" href="user_fitur/ls-shirt/index.html">Ls-tshirt</a></li>
+            <li><a class="dropdown-item" href="user_fitur/long-sleeve/index.html">Long-sleeve</a></li>
+            <li><a class="dropdown-item" href="user_fitur/hoody/index.html">Hoodie</a></li>
+            <li><a class="dropdown-item" href="user_fitur/crewneck/index.html">Crewneck</a></li>
+            <li><a class="dropdown-item" href="user_fitur/topi/index.html">Topi</a></li>
+            <li><a class="dropdown-item" href="user_fitur/tote-bag/index.html">Tote-bag</a></li>
+          </ul>
+</div>
      </div>
      <div class="d-none d-md-block col-md-6">
       <img src="img/banner2.png"  width="100%">
