--- a/user_fitur/long-sleeve/index.html
+++ b/user_fitur/long-sleeve/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="navbar">
-        <a href="../../../index.html" id="kembali">
+        <a href="../../index.html" id="kembali">
            <p id="kembalitext">Kembali</p>
 		</a>
         <a href="" id="kembali2">
