--- a/user_fitur/t-shirt/index.html
+++ b/user_fitur/t-shirt/index.html
@@ -236,7 +236,7 @@
 													<p class="name">Putar desain</p>
 													<!-- <p class="value">100%</p> -->
 												</div>
-												<input id="input-rotate5" type="range" value="180" min="0" max="360">
+												<input id="input-rotate" type="range" value="180" min="0" max="360">
 											</div>
                             
                                              <div class="slider" id="contenerukuran2">
