--- a/user_fitur/t-shirt/index.html
+++ b/user_fitur/t-shirt/index.html
@@ -33,13 +33,16 @@
 
 							<div class="wraper_editor">
 											                 
+												<a type="button" id="front">
+													<p id="fronttext">Depan</p>
+												</a>
 												<a type="button" id="back">
 													<p id="backtext">Belakang</p>
 												</a>
 				                                 <a href="" id="riset">
-									    		                  <p id="risettext">reset <i class="bi bi-arrow-counterclockwise"></i>
-									    		                  </p>
-									    	                 </a> 
+													<p id="risettext">reset <i class="bi    bi-arrow-counterclockwise"></i>
+													</p>
+												</a> 
 								                 
 				                                 <a href="../../fitur_edit" id="edit">
 				                         	        <p id="edittext">Edit Desain</p>
