--- a/user_fitur/t-shirt/index.html
+++ b/user_fitur/t-shirt/index.html
@@ -28,6 +28,16 @@
 									fill: red;
 									mix-blend-mode: multiply;
 									}
+					.contenerdesain {
+									width: 30%;
+									height: 40%;
+									/*  border: solid red 2px;*/
+									position: absolute;
+									top:20%;
+									left:35%;
+									/*  background-color: salmon;*/
+									}
+
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
 										width: 88%;
@@ -44,7 +54,17 @@
 										right: 5%;
 										mix-blend-mode: multiply;
 										}
+						.contenerdesain {
+										width: 40%;
+										height: 40%;
+										/*  border: solid red 2px;*/
+										position: absolute;
+										top:20%;
+										left:30%;
+										/*  background-color: salmon;*/
+										}
 				}
+
 				@media screen and (max-width: 760px) {
 					.contenerkaos img {
 										width: 81%;
@@ -59,6 +79,15 @@
 									right: 8%;
 									mix-blend-mode: multiply;
 										}
+					.contenerdesain {
+									width: 35%;
+									height: 35%;
+									/*  border: solid red 2px;*/
+									position: absolute;
+									top:20%;
+									left:33%;
+									/*  background-color: salmon;*/
+									}
 				}
 			</style>
 </head>
@@ -269,13 +298,13 @@
 																					</div> 
 
 																					<div id="load5">
-                                              <div  id="templet">
+                                                                                         <div  id="templet">
 																						      <i id="italic">
 																							      	DESAIN MU DI SINI <br><br>
 																							      	BISA FOTO,KATA-KATA DLL
 																						      </i>
 																						  </div>
-																				         <div class="gambar5"></div>
+																				        <div class="gambar5"></div>
 																					</div>   
 																				 
 																		</div>
