--- a/user_fitur/tote-bag/index.html
+++ b/user_fitur/tote-bag/index.html
@@ -3,7 +3,7 @@
 <head>
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
-			<title>t-shirt</title>
+			<title>Tote-Bag</title>
 			 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 			<link rel="stylesheet" type="text/css" href="../style.css">
             <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
@@ -37,6 +37,12 @@
 									left:38%;
 									/*  background-color: salmon;*/
 									}
+							#back {
+										display: none;
+									}
+							#front {
+										display: none;
+									}
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -63,6 +69,12 @@
 										left:32%;
 										/*  background-color: salmon;*/
 										}
+								#back {
+										display: none;
+									}
+							#front {
+										display: none;
+									}
 				}
 
 				@media screen and (max-width: 760px) {
@@ -88,6 +100,12 @@
 									top:55%;
 									left:35%;
 									/*  background-color: salmon;*/
+									}
+							#back {
+										display: none;
+									}
+							#front {
+										display: none;
 									}
 				}
 			</style>
