--- a/user_fitur/hoody/index.html
+++ b/user_fitur/hoody/index.html
@@ -3,7 +3,7 @@
 <head>
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
-			<title>t-shirt</title>
+			<title>Hoodie</title>
 			 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 			<link rel="stylesheet" type="text/css" href="../style.css">
             <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
