--- a/user_fitur/topi/index.html
+++ b/user_fitur/topi/index.html
@@ -25,15 +25,15 @@
 									top: 3%;
 									right: 0%;
 									z-index: 1;
-									fill: red;
+									fill: #0e6b50;
 									mix-blend-mode: multiply;
 									}
 					.contenerdesain {
 									width: 25%;
-									height: 35%;
+									height: 25%;
 									/*  border: solid red 2px;*/
 									position: absolute;
-									top:15%;
+									top:20%;
 									left:37%;
 									/*  background-color: salmon;*/
 									}
@@ -42,6 +42,9 @@
 									}
 							#front {
 										display: none;
+									}
+							#italic {
+										font-size: small;
 									}
 
 				@media screen and (max-width: 1200px) {
@@ -62,10 +65,10 @@
 										}
 						.contenerdesain {
 										width: 35%;
-										height: 35%;
+										height: 25%;
 										/*  border: solid red 2px;*/
 										position: absolute;
-										top:18%;
+										top:22%;
 										left:32%;
 										/*  background-color: salmon;*/
 										}
@@ -75,6 +78,9 @@
 								#back {
 										display: none;
 									}
+								#italic {
+											font-size: smaller;
+										}
 				}
 
 				@media screen and (max-width: 760px) {
@@ -94,10 +100,10 @@
 										}
 					.contenerdesain {
 									width: 30%;
-									height: 30%;
+									height: 25%;
 									/*  border: solid red 2px;*/
 									position: absolute;
-									top:22%;
+									top:27%;
 									left:35%;
 									/*  background-color: salmon;*/
 									}
@@ -107,6 +113,9 @@
 					          #back {
 										display: none;
 									}
+							#italic {
+								font-size: smaller;
+							}
 				}
 			</style>
 </head>
