--- a/user_fitur/long-sleeve/index.html
+++ b/user_fitur/long-sleeve/index.html
@@ -25,7 +25,7 @@
 									top: 3%;
 									right: 1%;
 									z-index: 1;
-									fill: red;
+									fill: #f1ab17;
 									mix-blend-mode: multiply;
 									}
 					.contenerdesain {
