--- a/user_fitur/polo-shirt/index.html
+++ b/user_fitur/polo-shirt/index.html
@@ -25,7 +25,7 @@
 									top: 3%;
 									right: 1%;
 									z-index: 1;
-									fill: red;
+									fill: #0b9c41;
 									mix-blend-mode: multiply;
 									}
 					.contenerdesain {
