--- a/user_fitur/t-shirt/index.html
+++ b/user_fitur/t-shirt/index.html
@@ -25,7 +25,7 @@
 									top: 3%;
 									right: 13%;
 									z-index: 1;
-									fill: red;
+									fill: #f35b10;
 									mix-blend-mode: multiply;
 									}
 					.contenerdesain {
