--- a/user_fitur/tote-bag/index.html
+++ b/user_fitur/tote-bag/index.html
@@ -25,7 +25,7 @@
 									top: 3%;
 									right: 0%;
 									z-index: 1;
-									fill: red;
+									fill: #ac9153;
 									mix-blend-mode: multiply;
 									}
 					.contenerdesain {
@@ -75,6 +75,9 @@
 							#front {
 										display: none;
 									}
+							#italic {
+								font-size: smaller;
+							}
 				}
 
 				@media screen and (max-width: 760px) {
@@ -107,6 +110,9 @@
 							#front {
 										display: none;
 									}
+							#italic {
+								font-size: smaller;
+							}
 				}
 			</style>
 </head>
