--- a/user_fitur/crewneck/index.html
+++ b/user_fitur/crewneck/index.html
@@ -136,7 +136,7 @@
 
 										             <div id="warnakaos">
 																	<div id="color-wheel">
-																	  <input type="color" id="custom-color" name="head"
+																	  <input type="color" value="#003a07" id="custom-color"  name="head"
 																		hidden/>
 																		<label for="custom-color">
 																			<img src="../../img/colorwheel.png" alt="" width="40px">
