--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 <!-- akhir mock up -->
 
 <!-- produk digital -->
-<section>
+<!-- <section>
   <div class="container mt-5 bg-primary-subtle shadow">
 
     <div class="row text-center" style="padding:3%;">
@@ -266,8 +266,6 @@
 
        <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
-          <!-- <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">exsklusif</span>
-          <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">exsklusif</span> -->
           <a href="main_desain/desain1.html">
              <img src="fitur_desain/desain/Bike 4.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
@@ -281,8 +279,6 @@
 
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
-          <!-- <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">exsklusif</span>
-          <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">exsklusif</span> -->
           <a href="main_desain/desain2.html">
              <img src="fitur_desain/desain/mancing 11.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
@@ -296,8 +292,6 @@
 
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
-          <!-- <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">exsklusif</span>
-          <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">exsklusif</span> -->
           <a href="main_desain/desain3.html">
              <img src="fitur_desain/desain/03.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
@@ -311,8 +305,6 @@
 
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
-          <!-- <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">exsklusif</span>
-          <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">exsklusif</span> -->
           <a href="main_desain/desain4.html">
              <img src="fitur_desain/desain/04.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
@@ -326,8 +318,6 @@
 
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
-          <!-- <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">exsklusif</span>
-          <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">exsklusif</span> -->
           <a href="main_desain/desain5.html">
              <img src="fitur_desain/desain/05.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
@@ -341,8 +331,6 @@
 
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
-          <!-- <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">exsklusif</span>
-          <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">exsklusif</span> -->
           <a href="main_desain/desain6.html">
              <img src="fitur_desain/desain/06.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
@@ -356,8 +344,6 @@
       
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
-          <!-- <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">exsklusif</span>
-          <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">exsklusif</span> -->
           <a href="main_desain/desain7.html">
              <img src="fitur_desain/desain/07.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
@@ -371,8 +357,6 @@
 
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
-          <!-- <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">exsklusif</span>
-          <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">exsklusif</span> -->
           <a href="main_desain/desain8.html">
              <img src="fitur_desain/desain/08.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
@@ -390,7 +374,7 @@
     </div>
 
   </div>
-</section>
+</section> -->
 <!-- akhir produk digital -->
 
 <!-- footer -->
