--- a/user_fitur/ls-shirt/index.html
+++ b/user_fitur/ls-shirt/index.html
@@ -109,7 +109,7 @@
 	</div>
 
   <div class="contener_utama">
-        <span id="replace"></span>
+        <span id="replace" class="imgsave"></span>
 		<div class="contener_wraper">
 
 							<div class="wraper_editor">
@@ -396,6 +396,7 @@
 
 	    </div>
   </div>
+  <script src="../dom-to-image.js"></script>
   <script type="text/javascript" src="../script.js"></script>
 </body>
 </html>
