--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
     <div class="row justify-content-center"  style=" margin: 2%;">
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%;  height: 100%;">
+        <div class="card text-center" style="width: 100%;  height: 100%;" >
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/t-shirt/index.html">
              <img src="img/kaos.png" class="card-img-top" alt="..." style="padding:10%;">
            </a>
-          <div class="card-body">
+          <div class="card-body" id="btntshirt">
             <h5 class="card-title">T-shirt</h5>
             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
             <a href="user_fitur/t-shirt/index.html" class="btn btn-primary btn-sm">Buat Custom</a>
@@ -143,13 +143,13 @@
       </div>
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%; height: 100%;">
+        <div class="card text-center" style="width: 100%;  height: 100%;"">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/polo-shirt/index.html">
             <img src="img/polo.png" class="card-img-top" alt="..." style="padding:10%;">
           </a>
-          <div class="card-body" id="polo">
+          <div class="card-body" id="btnpolo">
             <h5 class="card-title">Polo-shirt</h5>
             <!-- <p class="card-text">Some quick example text to build on the card title</p> -->
             <a href="user_fitur/polo-shirt/index.html" class="btn btn-primary btn-sm">Buat Custom</a>
@@ -158,13 +158,13 @@
       </div>
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%;height: 100%;">
+        <div class="card text-center" style="width: 100%;  height: 100%;"">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/ls-shirt/index.html">
             <img src="img/kaos-ls.png" class="card-img-top" alt="..." style="padding:10%;">
           </a>
-          <div class="card-body">
+          <div class="card-body" id="btnls">
             <h5 class="card-title">Ls t-shirt</h5>
             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
             <a href="user_fitur/ls-shirt/index.html" class="btn btn-primary btn-sm">Buat Custom</a>
@@ -173,7 +173,7 @@
       </div>
       
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%; height: 100%;">
+        <div class="card text-center" style="width: 100%;  height: 100%;"">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/long-sleeve/index.html">
@@ -189,7 +189,7 @@
 
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%; height: 100%;">
+        <div class="card text-center" style="width: 100%;  height: 100%;"">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/hoody/index.html">
@@ -204,7 +204,7 @@
       </div>
       
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%; height: 100%;">
+        <div class="card text-center" style="width: 100%;  height: 100%;"">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/crewneck/index.html">
@@ -219,7 +219,7 @@
       </div>
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%; height: 100%;">
+        <div class="card text-center" style="width: 100%;  height: 100%;"">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/topi/index.html">
@@ -234,7 +234,7 @@
       </div>
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%; height: 100%;">
+        <div class="card text-center" style="width: 100%;  height: 100%;"">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/tote-bag/index.html">
