--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>print studio</title>
+    <title>Aplikasi sablon</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
     <!-- bootsrap icon -->
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow fixed-top">
       <div class="container">
              <a class="navbar-brand" href="#">
-               <p class="mt-1"><i class="bi bi-printer"></i> Print Studio</p>
+               <p class="mt-1"><i class="bi bi-printer"></i> Aplikasi Sablon</p>
               <!-- <img src="img/logo2.png" alt="Bootstrap" width="50"> -->
             </a>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -379,7 +379,7 @@
 
 <!-- footer -->
 <footer class="bg-primary text-white text-center mt-4">
-  <i class="bi bi-globe"> printstudio.co.id</i>
+  <i class="bi bi-globe"> aplikasisablon.com</i>
   <!-- <p>Printstudio.co.id</p> -->
 </footer>
 <!-- akhir footer -->
