--- a/user_fitur/tote-bag/index.html
+++ b/user_fitur/tote-bag/index.html
@@ -133,7 +133,7 @@
 	</div>
 
   <div class="contener_utama">
-        <span id="replace" class="imgsave"></span>
+        <!-- <span id="replace" class="imgsave"></span> -->
 		<div class="contener_wraper">
 
 							<div class="wraper_editor">
@@ -290,7 +290,7 @@
 									    		<p id="ordertext">Order <i class="bi bi-whatsapp"></i>
 									    		</p>
 									    	 </a>
-											 <div class="contenerkaos" id = "htmlContent">
+											 <div class="contenerkaos imgsave" id = "htmlContent">
 											  	            <div id="gambarbg"></div>
 															  <svg id="svg" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="84.637mm" height="163.715mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
 																viewBox="0 0 3610.73 6984.31"
