--- a/user_fitur/tote-bag/index.html
+++ b/user_fitur/tote-bag/index.html
@@ -133,7 +133,7 @@
 	</div>
 
   <div class="contener_utama">
-        <!-- <span id="replace" class="imgsave"></span> -->
+        <span id="replace" class="imgsave"></span>
 		<div class="contener_wraper">
 
 							<div class="wraper_editor">
