--- a/user_fitur/ls-shirt/index.html
+++ b/user_fitur/ls-shirt/index.html
@@ -37,6 +37,11 @@
 									left:37%;
 									/*  background-color: salmon;*/
 									}
+					   #replace img {
+										position: absolute;
+										width: 76.5%;
+										left: 10.7%;
+									}
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -100,15 +105,16 @@
         <a href="" id="kembali2">
 			<p id="kembalitext2">kembali</p>
 		</a>
-		<a type="button" id="save">
-		<p id="savetext">Download <i class="bi bi-download"></i></p>
-		</a>
+		
 		<a href="../../index.html" id="home">Home <i class="fas fa-home"></i></a>
 		<!--<a href="../../auth/registration" id="daftar">Daftar</a>
 		<a href="../../auth/login" id="login">Login</a>-->
 	</div>
 
   <div class="contener_utama">
+	    <a type="button" id="save">
+		<p id="savetext">Download <i class="bi bi-download"></i></p>
+		</a>
         <span id="replace" class="imgsave"></span>
 		<div class="contener_wraper">
 
