--- a/user_fitur/ls-shirt/index.html
+++ b/user_fitur/ls-shirt/index.html
@@ -68,6 +68,11 @@
 										left:32%;
 										/*  background-color: salmon;*/
 										}
+						#replace img {
+										position: absolute;
+										width: 87%;
+										left: 5.5%;
+									}
 				}
 
 				@media screen and (max-width: 760px) {
@@ -93,6 +98,13 @@
 									top:27%;
 									left:35%;
 									/*  background-color: salmon;*/
+									}
+					#replace img {
+									position: absolute;
+									width: 75%;
+									height: 84.2%;
+									left: 12%;
+									top: 8%;
 									}
 				}
 			</style>
