--- a/user_fitur/crewneck/index.html
+++ b/user_fitur/crewneck/index.html
@@ -37,6 +37,11 @@
 									left:37%;
 									/*  background-color: salmon;*/
 									}
+						#replace img {
+									position: absolute;
+									width: 80%;
+									left: 9%;
+								   }
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -63,6 +68,11 @@
 										left:32%;
 										/*  background-color: salmon;*/
 										}
+						  #replace img {
+										position: absolute;
+										width: 91%;
+										left: 3.5%;
+									   }
 				}
 
 				@media screen and (max-width: 760px) {
@@ -88,6 +98,11 @@
 									top:27%;
 									left:35%;
 									/*  background-color: salmon;*/
+									}
+					   #replace img {
+										position: absolute;
+										width: 76%;
+										left: 11.5%;
 									}
 				}
 			</style>
