--- a/user_fitur/long-sleeve/index.html
+++ b/user_fitur/long-sleeve/index.html
@@ -37,6 +37,11 @@
 									left:37%;
 									/*  background-color: salmon;*/
 									}
+					   #replace img {
+									position: absolute;
+									width: 73%;
+									left: 12.5%;
+									}
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -63,6 +68,11 @@
 										left:32%;
 										/*  background-color: salmon;*/
 										}
+						  #replace img {
+										position: absolute;
+										width: 83%;
+										left: 7.5%;
+									   }
 				}
 
 				@media screen and (max-width: 760px) {
@@ -88,6 +98,13 @@
 									top:33%;
 									left:35%;
 									/*  background-color: salmon;*/
+									}
+					   #replace img {
+										position: absolute;
+										width: 75%;
+										left: 12%;
+										height: 89%;
+										top: 6%;
 									}
 				}
 			</style>
