--- a/user_fitur/t-shirt/index.html
+++ b/user_fitur/t-shirt/index.html
@@ -37,6 +37,13 @@
 									left:35%;
 									/*  background-color: salmon;*/
 									}
+						#replace img {
+										position: absolute;
+										width: 73%;
+										left: 14%;
+										height: 92.5%;
+										top: 4.3%;
+									}
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -63,6 +70,13 @@
 										left:30%;
 										/*  background-color: salmon;*/
 										}
+						  #replace img {
+										position: absolute;
+										width: 87%;
+										left:  6.5%;
+										height: 94.5%;
+										top: 3%;
+									}
 				}
 
 				@media screen and (max-width: 760px) {
@@ -87,6 +101,13 @@
 									top:20%;
 									left:33%;
 									/*  background-color: salmon;*/
+									}
+						#replace img {
+										position: absolute;
+										width: 83%;
+										left:  9%;
+										height: 95%;
+										top: 3%;
 									}
 				}
 			</style>
