--- a/user_fitur/topi/index.html
+++ b/user_fitur/topi/index.html
@@ -46,6 +46,11 @@
 							#italic {
 										font-size: small;
 									}
+					   #replace img {
+										position: absolute;
+										width: 95%;
+										left:  2.5%;
+									}
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -81,6 +86,13 @@
 								#italic {
 											font-size: smaller;
 										}
+						  #replace img {
+										position: absolute;
+										width: 100%;
+										left:  0%;
+										height: 87%;
+										top: 7%;
+									   }
 				}
 
 				@media screen and (max-width: 760px) {
@@ -116,6 +128,13 @@
 							#italic {
 								font-size: smaller;
 							}
+							#replace img {
+										position: absolute;
+										width: 75%;
+										left:  12%;
+										height: 68%;
+										top: 16.5%;
+									}
 				}
 			</style>
 </head>
