--- a/user_fitur/hoody/index.html
+++ b/user_fitur/hoody/index.html
@@ -37,6 +37,11 @@
 									left:37%;
 									/*  background-color: salmon;*/
 									}
+					 #replace img {
+						            position: absolute;
+						            width: 77.5%;
+						            left: 10.3%;
+					               }
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -63,6 +68,11 @@
 										left:32%;
 										/*  background-color: salmon;*/
 										}
+						  #replace img {
+										position: absolute;
+										width: 88.3%;
+										left: 4.8%;
+									   }
 				}
 
 				@media screen and (max-width: 760px) {
@@ -88,6 +98,13 @@
 									top:32%;
 									left:35%;
 									/*  background-color: salmon;*/
+									}
+					   #replace img {
+									 position: absolute;
+									 width: 75%;
+									 left: 12%;
+									 top: 8.5%;
+									 height: 83.8%;
 									}
 				}
 			</style>
