--- a/user_fitur/polo-shirt/index.html
+++ b/user_fitur/polo-shirt/index.html
@@ -37,6 +37,11 @@
 									left:37%;
 									/*  background-color: salmon;*/
 									}
+					  #replace img {
+									position: absolute;
+									width: 60%;
+									left: 19%;
+									}
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -63,6 +68,11 @@
 										left:32%;
 										/*  background-color: salmon;*/
 										}
+						  #replace img {
+										position: absolute;
+										width: 69.5%;
+										left: 14.3%;
+									   }
 				}
 
 				@media screen and (max-width: 760px) {
@@ -87,6 +97,11 @@
 									top:27%;
 									left:35%;
 									/*  background-color: salmon;*/
+									}
+					   #replace img {
+										position: absolute;
+										width: 67%;
+										left: 16%;
 									}
 				}
 			</style>
