--- a/user_fitur/tote-bag/index.html
+++ b/user_fitur/tote-bag/index.html
@@ -43,6 +43,11 @@
 							#front {
 										display: none;
 									}
+						#replace img {
+										position: absolute;
+										width: 42.2%;
+										left:  29%;
+									}
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -78,6 +83,11 @@
 							#italic {
 								font-size: smaller;
 							}
+					   #replace img {
+										position: absolute;
+										width: 48%;
+										left:  26%;
+									}
 				}
 
 				@media screen and (max-width: 760px) {
@@ -113,6 +123,11 @@
 							#italic {
 								font-size: smaller;
 							}
+					#replace img {
+										position: absolute;
+										width: 46.5%;
+										left:  26.3%;
+									}
 				}
 			</style>
 </head>
