--- a/user_fitur/crewneck/index.html
+++ b/user_fitur/crewneck/index.html
@@ -37,11 +37,11 @@
 									left:37%;
 									/*  background-color: salmon;*/
 									}
-						#replace img {
+						/* #replace img {
 									position: absolute;
 									width: 80%;
 									left: 9%;
-								   }
+								   } */
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -68,11 +68,11 @@
 										left:32%;
 										/*  background-color: salmon;*/
 										}
-						  #replace img {
+						  /* #replace img {
 										position: absolute;
 										width: 91%;
 										left: 3.5%;
-									   }
+									   } */
 				}
 
 				@media screen and (max-width: 760px) {
@@ -99,11 +99,11 @@
 									left:35%;
 									/*  background-color: salmon;*/
 									}
-					   #replace img {
+					   /* #replace img {
 										position: absolute;
 										width: 76%;
 										left: 11.5%;
-									}
+									} */
 				}
 			</style>
 </head>
@@ -122,10 +122,10 @@
 	</div>
 
   <div class="contener_utama">
-	    <a type="button" id="save">
+	    <!-- <a type="button" id="save">
 		<p id="savetext">Download <i class="bi bi-download"></i></p>
 		</a>
-        <span id="replace" class="imgsave"></span>
+        <span id="replace" class="imgsave"></span> -->
 		<div class="contener_wraper">
 
 							<div class="wraper_editor">
