--- a/user_fitur/long-sleeve/index.html
+++ b/user_fitur/long-sleeve/index.html
@@ -37,11 +37,11 @@
 									left:37%;
 									/*  background-color: salmon;*/
 									}
-					   #replace img {
+					   /* #replace img {
 									position: absolute;
 									width: 73%;
 									left: 12.5%;
-									}
+									} */
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -68,11 +68,11 @@
 										left:32%;
 										/*  background-color: salmon;*/
 										}
-						  #replace img {
+						  /* #replace img {
 										position: absolute;
 										width: 83%;
 										left: 7.5%;
-									   }
+									   } */
 				}
 
 				@media screen and (max-width: 760px) {
@@ -99,13 +99,13 @@
 									left:35%;
 									/*  background-color: salmon;*/
 									}
-					   #replace img {
+					   /* #replace img {
 										position: absolute;
 										width: 75%;
 										left: 12%;
 										height: 89%;
 										top: 6%;
-									}
+									} */
 				}
 			</style>
 </head>
@@ -124,10 +124,10 @@
 	</div>
 
   <div class="contener_utama">
-	    <a type="button" id="save">
+	    <!-- <a type="button" id="save">
 		<p id="savetext">Download <i class="bi bi-download"></i></p>
 		</a>
-        <span id="replace" class="imgsave"></span>
+        <span id="replace" class="imgsave"></span> -->
 		<div class="contener_wraper">
 
 							<div class="wraper_editor">
