--- a/user_fitur/polo-shirt/index.html
+++ b/user_fitur/polo-shirt/index.html
@@ -35,13 +35,15 @@
 									position: absolute;
 									top:30%;
 									left:37%;
-									/*  background-color: salmon;*/
+									 /* background-color: salmon; */
 									}
-					  #replace img {
-									position: absolute;
-									width: 60%;
-									left: 19%;
-									}
+					      /* #replace  {
+						                position: absolute;
+										width: 52%;
+										height: 100%;
+										left: 0%;
+										top:0%;
+									}  */
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -68,11 +70,11 @@
 										left:32%;
 										/*  background-color: salmon;*/
 										}
-						  #replace img {
+						  /* #replace img {
 										position: absolute;
 										width: 69.5%;
 										left: 14.3%;
-									   }
+									   } */
 				}
 
 				@media screen and (max-width: 760px) {
@@ -98,11 +100,11 @@
 									left:35%;
 									/*  background-color: salmon;*/
 									}
-					   #replace img {
+					   /* #replace img {
 										position: absolute;
 										width: 67%;
 										left: 16%;
-									}
+									} */
 				}
 			</style>
 </head>
@@ -121,10 +123,10 @@
 	</div>
 
   <div class="contener_utama">
-	    <a type="button" id="save">
+	    <!-- <a type="button" id="save">
 		<p id="savetext">Download <i class="bi bi-download"></i></p>
 		</a>
-        <span id="replace" class="imgsave"></span>
+        <span id="replace" class="imgsave"></span> -->
 		<div class="contener_wraper">
 
 							<div class="wraper_editor">
