--- a/user_fitur/topi/index.html
+++ b/user_fitur/topi/index.html
@@ -46,11 +46,11 @@
 							#italic {
 										font-size: small;
 									}
-					   #replace img {
+					   /* #replace img {
 										position: absolute;
 										width: 95%;
 										left:  2.5%;
-									}
+									} */
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -86,13 +86,13 @@
 								#italic {
 											font-size: smaller;
 										}
-						  #replace img {
+						  /* #replace img {
 										position: absolute;
 										width: 100%;
 										left:  0%;
 										height: 87%;
 										top: 7%;
-									   }
+									   } */
 				}
 
 				@media screen and (max-width: 760px) {
@@ -128,13 +128,13 @@
 							#italic {
 								font-size: smaller;
 							}
-							#replace img {
+							/* #replace img {
 										position: absolute;
 										width: 75%;
 										left:  12%;
 										height: 68%;
 										top: 16.5%;
-									}
+									} */
 				}
 			</style>
 </head>
@@ -153,10 +153,10 @@
 	</div>
 
   <div class="contener_utama">
-	    <a type="button" id="save">
+	    <!-- <a type="button" id="save">
 		<p id="savetext">Download <i class="bi bi-download"></i></p>
 		</a>
-        <span id="replace" class="imgsave"></span>
+        <span id="replace" class="imgsave"></span> -->
 		<div class="contener_wraper">
 
 							<div class="wraper_editor">
