--- a/user_fitur/tote-bag/index.html
+++ b/user_fitur/tote-bag/index.html
@@ -43,11 +43,11 @@
 							#front {
 										display: none;
 									}
-						#replace img {
+						/* #replace img {
 										position: absolute;
 										width: 42.2%;
 										left:  29%;
-									}
+									} */
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -83,11 +83,11 @@
 							#italic {
 								font-size: smaller;
 							}
-					   #replace img {
+					   /* #replace img {
 										position: absolute;
 										width: 48%;
 										left:  26%;
-									}
+									} */
 				}
 
 				@media screen and (max-width: 760px) {
@@ -123,11 +123,11 @@
 							#italic {
 								font-size: smaller;
 							}
-					#replace img {
+					/* #replace img {
 										position: absolute;
 										width: 46.5%;
 										left:  26.3%;
-									}
+									} */
 				}
 			</style>
 </head>
@@ -146,10 +146,10 @@
 	</div>
 
   <div class="contener_utama">
-	    <a type="button" id="save">
+	    <!-- <a type="button" id="save">
 		<p id="savetext">Download <i class="bi bi-download"></i></p>
 		</a>
-        <span id="replace" class="imgsave"></span>
+        <span id="replace" class="imgsave"></span> -->
 		<div class="contener_wraper">
 
 							<div class="wraper_editor">
