--- a/user_fitur/hoody/index.html
+++ b/user_fitur/hoody/index.html
@@ -37,11 +37,11 @@
 									left:37%;
 									/*  background-color: salmon;*/
 									}
-					 #replace img {
+					 /* #replace img {
 						            position: absolute;
 						            width: 77.5%;
 						            left: 10.3%;
-					               }
+					               } */
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -68,11 +68,11 @@
 										left:32%;
 										/*  background-color: salmon;*/
 										}
-						  #replace img {
+						  /* #replace img {
 										position: absolute;
 										width: 88.3%;
 										left: 4.8%;
-									   }
+									   } */
 				}
 
 				@media screen and (max-width: 760px) {
@@ -99,13 +99,13 @@
 									left:35%;
 									/*  background-color: salmon;*/
 									}
-					   #replace img {
+					   /* #replace img {
 									 position: absolute;
 									 width: 75%;
 									 left: 12%;
 									 top: 8.5%;
 									 height: 83.8%;
-									}
+									} */
 				}
 			</style>
 </head>
@@ -124,10 +124,10 @@
 	</div>
 
   <div class="contener_utama">
-	    <a type="button" id="save">
+	    <!-- <a type="button" id="save">
 		<p id="savetext">Download <i class="bi bi-download"></i></p>
 		</a>
-        <span id="replace" class="imgsave"></span>
+        <span id="replace" class="imgsave"></span> -->
 		<div class="contener_wraper">
 
 							<div class="wraper_editor">
