--- a/user_fitur/t-shirt/index.html
+++ b/user_fitur/t-shirt/index.html
@@ -37,13 +37,13 @@
 									left:35%;
 									/*  background-color: salmon;*/
 									}
-						#replace img {
+						/* #replace img {
 										position: absolute;
 										width: 73%;
 										left: 14%;
 										height: 92.5%;
 										top: 4.3%;
-									}
+									} */
 
 				@media screen and (max-width: 1200px) {
 					.contenerkaos img {
@@ -70,13 +70,13 @@
 										left:30%;
 										/*  background-color: salmon;*/
 										}
-						  #replace img {
+						  /* #replace img {
 										position: absolute;
 										width: 87%;
 										left:  6.5%;
 										height: 94.5%;
 										top: 3%;
-									}
+									} */
 				}
 
 				@media screen and (max-width: 760px) {
@@ -102,13 +102,13 @@
 									left:33%;
 									/*  background-color: salmon;*/
 									}
-						#replace img {
+						/* #replace img {
 										position: absolute;
 										width: 83%;
 										left:  9%;
 										height: 95%;
 										top: 3%;
-									}
+									} */
 				}
 			</style>
 </head>
@@ -127,10 +127,10 @@
 	</div>
 
   <div class="contener_utama">
-	    <a type="button" id="save">
+	    <!-- <a type="button" id="save">
 		<p id="savetext">Download <i class="bi bi-download"></i></p>
 		</a>
-        <span id="replace" class="imgsave"></span>
+        <span id="replace" class="imgsave"></span> -->
 		<div class="contener_wraper">
 
 							<div class="wraper_editor">
