--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div class="row justify-content-center"  style=" margin: 2%;">
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%;  height: 100%;" >
+        <div class="card text-center" id="tshirtcard">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/t-shirt/index.html">
@@ -143,7 +143,7 @@
       </div>
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%;  height: 100%;"">
+        <div class="card text-center" id="polocard">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/polo-shirt/index.html">
@@ -158,7 +158,7 @@
       </div>
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%;  height: 100%;"">
+        <div class="card text-center" id="lscard">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/ls-shirt/index.html">
@@ -173,7 +173,7 @@
       </div>
       
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%;  height: 100%;"">
+        <div class="card text-center" id="longcard">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/long-sleeve/index.html">
@@ -189,7 +189,7 @@
 
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%;  height: 100%;"">
+        <div class="card text-center" id="hdtcard">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/hoody/index.html">
@@ -204,7 +204,7 @@
       </div>
       
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%;  height: 100%;"">
+        <div class="card text-center" id="crewtcard">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/crewneck/index.html">
@@ -219,13 +219,13 @@
       </div>
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%;  height: 100%;"">
+        <div class="card text-center" id="topicard">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/topi/index.html">
             <img src="img/topi-mockup.png" class="card-img-top mt-5" alt="..." style="padding:10%;">
           </a>
-          <div class="card-body">
+          <div class="card-body" id="btntopi">
             <h5 class="card-title">Topi</h5>
             <!-- <p class="card-text">Some quick example text to build on the card title</p> -->
             <a href="user_fitur/topi/index.html" class="btn btn-primary btn-sm">Buat Custom</a>
@@ -234,7 +234,7 @@
       </div>
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" style="width: 100%;  height: 100%;"">
+        <div class="card text-center" id="totebagcard">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/tote-bag/index.html">
