--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" id="hdtcard">
+        <div class="card text-center" id="hdcard">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/hoody/index.html">
@@ -204,7 +204,7 @@
       </div>
       
       <div class="col-6 col-md-4 mb-4">
-        <div class="card text-center" id="crewtcard">
+        <div class="card text-center" id="crewcard">
           <span class="d-md-none badge bg-warning mt-2 text-black" style="width: 70%;">Free download</span>
           <span class="d-none d-md-block badge bg-warning mt-2 text-black" style="width: 50%;">Free download</span>
           <a href="user_fitur/crewneck/index.html">
