menambahkan fitur desain

--- a/user_fitur/t-shirt/index.html
+++ b/user_fitur/t-shirt/index.html
@@ -133,16 +133,15 @@
         <span id="replace" class="imgsave"></span> -->
 		<div class="contener_wraper">
 
-							<div class="wraper_editor">
-											                 
+							<div class="wraper_editor">    
 												<a type="button" id="front">
 													<p id="fronttext">Depan</p>
 												</a>
 												<a type="button" id="back">
 													<p id="backtext">Belakang</p>
 												</a>
-				                                 <a href="" id="riset">
-													<p id="risettext">reset <i class="bi    bi-arrow-counterclockwise"></i>
+				                                 <a href="../../fitur_desain/page1/page1.html" id="riset">
+													<p id="risettext">Cari desain <i class="bi bi-search"></i>
 													</p>
 												</a> 
 								                 
@@ -289,6 +288,7 @@
 									    	 </a>
 											 <div class="contenerkaos" id = "htmlContent">
 											  	            <div id="gambarbg"></div>
+															<span id="replace"></span>
 															  <svg id="svg" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="84.618mm" height="92.2653mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
 																viewBox="0 0 10492.31 11440.55"
 																xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -302,7 +302,7 @@
 															<img src="front.png" id="kaos">
                                                             <!-- <div id="overflow"> -->
 															   <div class="contenerdesain">
-																	  <div  id="drag-area">  
+																	  <div  id="drag-area">
 																				   <div id="load"> 
 																					    <div  class="gambar"></div>
 																				   </div> 
