--- a/user_fitur/topi/index.html
+++ b/user_fitur/topi/index.html
@@ -167,8 +167,8 @@
 												<a type="button" id="back">
 													<p id="backtext">Belakang</p>
 												</a>
-				                                 <a href="" id="riset">
-													<p id="risettext">reset <i class="bi    bi-arrow-counterclockwise"></i>
+				                                 <a href="../../fitur_desain/page1/page1.html" id="riset">
+													<p id="risettext">Cari desain <i class="bi bi-search"></i>
 													</p>
 												</a> 
 								                 
