--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 <!-- akhir mock up -->
 
 <!-- produk digital -->
-<!-- <section>
+<section>
   <div class="container mt-5 bg-primary-subtle shadow">
 
     <div class="row text-center" style="padding:3%;">
@@ -374,7 +374,7 @@
     </div>
 
   </div>
-</section> -->
+</section>
 <!-- akhir produk digital -->
 
 <!-- footer -->
