--- a/fitur_desain/page1/page1.html
+++ b/fitur_desain/page1/page1.html
@@ -272,7 +272,7 @@
 
 <!-- footer -->
 <footer class="bg-primary text-white text-center mt-4">
-  <i class="bi bi-globe"> printstudio.co.id</i>
+  <i class="bi bi-globe"> aplikasisablon.com</i>
   <!-- <p>Printstudio.co.id</p> -->
 </footer>
 <!-- akhir footer -->
